Update auto generated citeproc.yaml

--- a/_posts/2011-12-21-chaudhuri11a.md
+++ b/_posts/2011-12-21-chaudhuri11a.md
@@ -39,6 +39,7 @@ author:
 - given: Daniel
   family: Hsu
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
