--- a/_posts/2011-12-21-grunwald11b.md
+++ b/_posts/2011-12-21-grunwald11b.md
@@ -23,6 +23,7 @@ author:
 - given: Wojciech
   family: Kotłowski
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
