--- a/_posts/2011-12-21-slivkins11a.md
+++ b/_posts/2011-12-21-slivkins11a.md
@@ -36,6 +36,7 @@ author:
 - given: Aleksandrs
   family: Slivkins
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
