--- a/_posts/2011-12-21-acharya11a.md
+++ b/_posts/2011-12-21-acharya11a.md
@@ -27,6 +27,7 @@ author:
 - given: Shengjun
   family: Pan
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
