--- a/_posts/2011-12-21-amin11a.md
+++ b/_posts/2011-12-21-amin11a.md
@@ -29,6 +29,7 @@ author:
 - given: Umar
   family: Syed
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
