--- a/_posts/2011-12-21-foygel11a.md
+++ b/_posts/2011-12-21-foygel11a.md
@@ -22,6 +22,7 @@ author:
 - given: Nathan
   family: Srebro
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
