--- a/_posts/2011-12-21-michael11a.md
+++ b/_posts/2011-12-21-michael11a.md
@@ -17,6 +17,7 @@ author:
 - given: Loizos
   family: Michael
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
