--- a/_posts/2011-12-21-mukherjee11a.md
+++ b/_posts/2011-12-21-mukherjee11a.md
@@ -32,6 +32,7 @@ author:
 - given: Robert E.
   family: Schapire
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
