--- a/_posts/2011-12-21-rakhlin11a.md
+++ b/_posts/2011-12-21-rakhlin11a.md
@@ -28,6 +28,7 @@ author:
 - given: Ambuj
   family: Tewari
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
