--- a/_posts/2011-12-21-rudin11a.md
+++ b/_posts/2011-12-21-rudin11a.md
@@ -33,6 +33,7 @@ author:
 - given: David
   family: Madigan
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
