--- a/_posts/2011-12-21-yang11a.md
+++ b/_posts/2011-12-21-yang11a.md
@@ -31,6 +31,7 @@ author:
 - given: Jaime
   family: Carbonell
 date: 2011-12-21
+address: Budapest, Hungary
 publisher: PMLR
 container-title: Proceedings of the 24th Annual Conference on Learning Theory
 volume: '19'
