Update auto generated citeproc.yaml

--- a/_posts/2011-12-21-bartok11a.md
+++ b/_posts/2011-12-21-bartok11a.md
@@ -11,14 +11,13 @@ abstract: In a partial monitoring game, the learner repeatedly chooses an action
   of any such game is either zero,\widetildeΘ(\sqrtT), Θ(T^2/3), or Θ(T). We provide
   a computationally efficient learningalgorithm that achieves the minimax regret within
   logarithmic factor for any game.
-pdf: http://proceedings.pmlr.press/bartok11a/bartok11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/bartok11a/bartok11a.pdf
 layout: inproceedings
 id: bartok11a
 month: 0
 firstpage: 133
 lastpage: 154
 page: 133-154
-origpdf: http://jmlr.org/proceedings/papers/v19/bartok11a/bartok11a.pdf
 sections: 
 author:
 - given: Gábor
@@ -27,6 +26,7 @@ author:
   family: Pál
 - given: Csaba
   family: Szepesvári
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
