--- a/_posts/2011-12-21-chaudhuri11a.md
+++ b/_posts/2011-12-21-chaudhuri11a.md
@@ -24,20 +24,20 @@ abstract: 'This work studies the problem of privacy-preserving classification â€
   examples)be considered sensitive information. An upper bound on the samplerequirement
   of learning with label privacy was shown by \citetCDKMT06; inthis work, we show
   a lower bound.'
-pdf: http://proceedings.pmlr.press/chaudhuri11a/chaudhuri11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/chaudhuri11a/chaudhuri11a.pdf
 layout: inproceedings
 id: chaudhuri11a
 month: 0
 firstpage: 155
 lastpage: 186
 page: 155-186
-origpdf: http://jmlr.org/proceedings/papers/v19/chaudhuri11a/chaudhuri11a.pdf
 sections: 
 author:
 - given: Kamalika
   family: Chaudhuri
 - given: Daniel
   family: Hsu
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
