--- a/_posts/2011-12-21-feldman11b.md
+++ b/_posts/2011-12-21-feldman11b.md
@@ -19,18 +19,18 @@ abstract: Valiant’s model of evolvability models the evolutionary process of a
   without any decreases in performance. Previously, monotone evolvability was only
   shown for conjunctions with quadratic loss \citepFeldman:09sqd or when the distribution
   on the domain is severely restricted \citepMichael:07,Feldman:09sqd,KanadeVV:10.
-pdf: http://proceedings.pmlr.press/feldman11b/feldman11b.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/feldman11b/feldman11b.pdf
 layout: inproceedings
 id: feldman11b
 month: 0
 firstpage: 253
 lastpage: 272
 page: 253-272
-origpdf: http://jmlr.org/proceedings/papers/v19/feldman11b/feldman11b.pdf
 sections: 
 author:
 - given: Vitaly
   family: Feldman
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
