--- a/_posts/2011-12-21-grunwald11a.md
+++ b/_posts/2011-12-21-grunwald11a.md
@@ -10,18 +10,18 @@ abstract: We extend Bayesian MAP and Minimum Description Length (MDL) learning b
   in statisticallearning theory, the approach achieves optimal rates under, e.g.,Tsybakov’s
   conditions, and reveals new situations in which we canpenalize by (- \log \text\sc
   prior)/n rather than \sqrt(- \log \text\sc prior)/n.
-pdf: http://proceedings.pmlr.press/grunwald11a/grunwald11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/grunwald11a/grunwald11a.pdf
 layout: inproceedings
 id: grunwald11a
 month: 0
 firstpage: 397
 lastpage: 420
 page: 397-420
-origpdf: http://jmlr.org/proceedings/papers/v19/grunwald11a/grunwald11a.pdf
 sections: 
 author:
 - given: Peter
   family: Grünwald
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
