--- a/_posts/2011-12-21-michael11a.md
+++ b/_posts/2011-12-21-michael11a.md
@@ -4,18 +4,18 @@ abstract: To what extent is learnability impeded when information is missing in 
   instances? We present relevant known results and concrete open problems, in the
   context of a natural extension of the PAC learning model that accounts for arbitrarily
   missing information.
-pdf: http://proceedings.pmlr.press/michael11a/michael11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/michael11a/michael11a.pdf
 layout: inproceedings
 id: michael11a
 month: 0
 firstpage: 825
 lastpage: 828
 page: 825-828
-origpdf: http://jmlr.org/proceedings/papers/v19/michael11a/michael11a.pdf
 sections: 
 author:
 - given: Loizos
   family: Michael
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
