--- a/_posts/2011-12-21-rigollet11a.md
+++ b/_posts/2011-12-21-rigollet11a.md
@@ -12,20 +12,20 @@ abstract: 'Motivated by problems of anomaly detection, this paper implements the
   constraint has interesting consequences on the control of the type II error and
   we develop new techniques to handle this situation.  Finally, connections with chance
   constrained optimization are evident and are investigated.'
-pdf: http://proceedings.pmlr.press/rigollet11a/rigollet11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/rigollet11a/rigollet11a.pdf
 layout: inproceedings
 id: rigollet11a
 month: 0
 firstpage: 595
 lastpage: 614
 page: 595-614
-origpdf: http://jmlr.org/proceedings/papers/v19/rigollet11a/rigollet11a.pdf
 sections: 
 author:
 - given: Philippe
   family: Rigollet
 - given: Xin
   family: Tong
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
