--- a/_posts/2011-12-21-vanerven11a.md
+++ b/_posts/2011-12-21-vanerven11a.md
@@ -11,14 +11,13 @@ abstract: "Mixability of a loss governs the best possible performance when\taggr
   that bounds\tprediction performance in terms of the geometry of the Bayes risk.\tAlthough
   all calculations are for proper losses, we also show how\tto carry the results across
   to improper losses."
-pdf: http://proceedings.pmlr.press/vanerven11a/vanerven11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/vanerven11a/vanerven11a.pdf
 layout: inproceedings
 id: vanerven11a
 month: 0
 firstpage: 233
 lastpage: 252
 page: 233-252
-origpdf: http://jmlr.org/proceedings/papers/v19/vanerven11a/vanerven11a.pdf
 sections: 
 author:
 - given: Tim
@@ -27,6 +26,7 @@ author:
   family: Reid
 - given: Robert C.
   family: Williamson
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
