--- a/_posts/2011-12-21-abernethy11b.md
+++ b/_posts/2011-12-21-abernethy11b.md
@@ -8,14 +8,13 @@ abstract: 'We consider the celebrated Blackwell Approachability Theorem for two-
   Online Linear Optimization. We show that any algorithm for one such problem can
   be efficiently converted into an algorithm for the other. We provide one novel application
   of this reduction: the first \emphefficient algorithm for calibrated forecasting.'
-pdf: http://proceedings.pmlr.press/abernethy11b/abernethy11b.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/abernethy11b/abernethy11b.pdf
 layout: inproceedings
 id: abernethy11b
 month: 0
 firstpage: 27
 lastpage: 46
 page: 27-46
-origpdf: http://jmlr.org/proceedings/papers/v19/abernethy11b/abernethy11b.pdf
 sections: 
 author:
 - given: Jacob
@@ -24,6 +23,7 @@ author:
   family: Bartlett
 - given: Elad
   family: Hazan
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
