--- a/_posts/2011-12-21-amin11a.md
+++ b/_posts/2011-12-21-amin11a.md
@@ -12,14 +12,13 @@ abstract: Motivated by multi-armed bandits (MAB) problems with a very large or e
   a generalization to the infinite cardinality setting, andcomment on how our analysis
   is connected to, and improves upon, existing results for query learning and generalized
   binary search.
-pdf: http://proceedings.pmlr.press/amin11a/amin11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/amin11a/amin11a.pdf
 layout: inproceedings
 id: amin11a
 month: 0
 firstpage: 87
 lastpage: 106
 page: 87-106
-origpdf: http://jmlr.org/proceedings/papers/v19/amin11a/amin11a.pdf
 sections: 
 author:
 - given: Kareem
@@ -28,6 +27,7 @@ author:
   family: Kearns
 - given: Umar
   family: Syed
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
