--- a/_posts/2011-12-21-audibert11a.md
+++ b/_posts/2011-12-21-audibert11a.md
@@ -14,14 +14,13 @@ abstract: 'We address the online linear optimization problem when theactions of 
   only exception of the bandit game, the upper and lower boundsare tight, up to a
   constant factor.Finally, we answer a question asked by \citeKWK10 by showing that
   the exponentially weighted average forecaster is suboptimal against L_∞ adversaries.'
-pdf: http://proceedings.pmlr.press/audibert11a/audibert11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/audibert11a/audibert11a.pdf
 layout: inproceedings
 id: audibert11a
 month: 0
 firstpage: 107
 lastpage: 132
 page: 107-132
-origpdf: http://jmlr.org/proceedings/papers/v19/audibert11a/audibert11a.pdf
 sections: 
 author:
 - given: Jean-Yves
@@ -30,6 +29,7 @@ author:
   family: Bubeck
 - given: Gábor
   family: Lugosi
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
