--- a/_posts/2011-12-21-comminges11a.md
+++ b/_posts/2011-12-21-comminges11a.md
@@ -11,20 +11,20 @@ abstract: We address the issue of variable selection in the regression model wit
   the sample size.  The procedure that is provably consistent under these tight conditions
   is simple and is based on comparing the empirical Fourier coefficients with an appropriately
   chosen threshold value.
-pdf: http://proceedings.pmlr.press/comminges11a/comminges11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/comminges11a/comminges11a.pdf
 layout: inproceedings
 id: comminges11a
 month: 0
 firstpage: 187
 lastpage: 206
 page: 187-206
-origpdf: http://jmlr.org/proceedings/papers/v19/comminges11a/comminges11a.pdf
 sections: 
 author:
 - given: Laëtitia
   family: Comminges
 - given: Arnak S.
   family: Dalalyan
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
