--- a/_posts/2011-12-21-feldman11a.md
+++ b/_posts/2011-12-21-feldman11a.md
@@ -34,14 +34,13 @@ abstract: Much work has been done on learning various classes of “simple"monot
   applicable to a number of other contexts.Finally, we demonstrate that our technique
   can also be used to reduce the well-known open problem of learning juntas to learning
   of depth-3 monotone formulas.
-pdf: http://proceedings.pmlr.press/feldman11a/feldman11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/feldman11a/feldman11a.pdf
 layout: inproceedings
 id: feldman11a
 month: 0
 firstpage: 273
 lastpage: 292
 page: 273-292
-origpdf: http://jmlr.org/proceedings/papers/v19/feldman11a/feldman11a.pdf
 sections: 
 author:
 - given: Vitaly
@@ -50,6 +49,7 @@ author:
   family: Lee
 - given: Rocco A.
   family: Servedio
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
