--- a/_posts/2011-12-21-foster11a.md
+++ b/_posts/2011-12-21-foster11a.md
@@ -7,14 +7,13 @@ abstract: We consider the problem of forecasting a sequence of outcomes from an 
   of checking rules can be captured by the notion of a sequential cover introduced
   in \citepRakSriTew10a. Various natural assumptions on the class of checking rules
   are considered, including finiteness of Vapnik-Chervonenkis and Littlestone’s dimensions.
-pdf: http://proceedings.pmlr.press/foster11a/foster11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/foster11a/foster11a.pdf
 layout: inproceedings
 id: foster11a
 month: 0
 firstpage: 293
 lastpage: 314
 page: 293-314
-origpdf: http://jmlr.org/proceedings/papers/v19/foster11a/foster11a.pdf
 sections: 
 author:
 - given: Dean P.
@@ -25,6 +24,7 @@ author:
   family: Sridharan
 - given: Ambuj
   family: Tewari
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
