--- a/_posts/2011-12-21-foygel11a.md
+++ b/_posts/2011-12-21-foygel11a.md
@@ -7,20 +7,20 @@ abstract: We consider the problem of approximately reconstructing a partially-ob
   guarantees based on existing analysis on the  Rademacher complexity of the unit
   balls of these norms. We show how  these are superior in several ways to recently
   published guarantees  based on specialized analysis.
-pdf: http://proceedings.pmlr.press/foygel11a/foygel11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/foygel11a/foygel11a.pdf
 layout: inproceedings
 id: foygel11a
 month: 0
 firstpage: 315
 lastpage: 340
 page: 315-340
-origpdf: http://jmlr.org/proceedings/papers/v19/foygel11a/foygel11a.pdf
 sections: 
 author:
 - given: Rina
   family: Foygel
 - given: Nathan
   family: Srebro
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
