--- a/_posts/2011-12-21-gao11a.md
+++ b/_posts/2011-12-21-gao11a.md
@@ -16,20 +16,20 @@ abstract: Multi-label learning has attracted much attention during the past few 
   and give a surrogate loss function which is consistent for the deterministic case.
   Finally, we discuss on the consistency of learning approaches which address multi-label
   learning by decomposing into a set of binary classification problems.
-pdf: http://proceedings.pmlr.press/gao11a/gao11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/gao11a/gao11a.pdf
 layout: inproceedings
 id: gao11a
 month: 0
 firstpage: 341
 lastpage: 358
 page: 341-358
-origpdf: http://jmlr.org/proceedings/papers/v19/gao11a/gao11a.pdf
 sections: 
 author:
 - given: Wei
   family: Gao
 - given: Zhi-Hua
   family: Zhou
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
