--- a/_posts/2011-12-21-garivier11a.md
+++ b/_posts/2011-12-21-garivier11a.md
@@ -14,20 +14,20 @@ abstract: 'This paper presents a finite-time analysis of the KL-UCB algorithm, a
   rely on deviations results of independent interest which are stated and proved  in
   the Appendix. As a by-product, we also obtain an improved regret bound for the standard
   UCB  algorithm.'
-pdf: http://proceedings.pmlr.press/garivier11a/garivier11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/garivier11a/garivier11a.pdf
 layout: inproceedings
 id: garivier11a
 month: 0
 firstpage: 359
 lastpage: 376
 page: 359-376
-origpdf: http://jmlr.org/proceedings/papers/v19/garivier11a/garivier11a.pdf
 sections: 
 author:
 - given: Aurélien
   family: Garivier
 - given: Olivier
   family: Cappé
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
