--- a/_posts/2011-12-21-kakade11a.md
+++ b/_posts/2011-12-21-kakade11a.md
@@ -2,7 +2,7 @@
 title: Preface
 abstract: Preface to the Proceedings of the 24th Annual Conference on Learning Theory
   June 9-11, 2011, Budapest, Hungary.
-pdf: http://proceedings.pmlr.press/kakade11a/kakade11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/kakade11a/kakade11a.pdf
 section: preface
 layout: inproceedings
 id: kakade11a
@@ -10,13 +10,13 @@ month: 0
 firstpage: 0
 lastpage: 0
 page: 0-0
-origpdf: http://jmlr.org/proceedings/papers/v19/kakade11a/kakade11a.pdf
 sections: 
 author:
 - given: Sham M.
   family: Kakade
 - given: Ulrike
   family: von Luxburg
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
