--- a/_posts/2011-12-21-kallweit11a.md
+++ b/_posts/2011-12-21-kallweit11a.md
@@ -7,20 +7,20 @@ abstract: Concept classes can canonically be represented by sign-matrices,i.e., 
   of margin complexity, reveal how they are relatedto each other, and we reveal how
   they are related to other notions of learning-theoretic relevance like SQ-dimension,
   CSQ-dimension,and the Forster bound.
-pdf: http://proceedings.pmlr.press/kallweit11a/kallweit11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/kallweit11a/kallweit11a.pdf
 layout: inproceedings
 id: kallweit11a
 month: 0
 firstpage: 437
 lastpage: 456
 page: 437-456
-origpdf: http://jmlr.org/proceedings/papers/v19/kallweit11a/kallweit11a.pdf
 sections: 
 author:
 - given: Michael
   family: Kallweit
 - given: Hans Ulrich
   family: Simon
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
