--- a/_posts/2011-12-21-kotlowski11a.md
+++ b/_posts/2011-12-21-kotlowski11a.md
@@ -13,20 +13,20 @@ abstract: The paper considers sequential prediction of individual sequences  wit
   exponential families, the regret  is bounded by the familiar (k/2) \log n and thus
   optimal up to  O(1).  We also show the relationship to the Bayes strategy with  Jeffreys’
   prior.
-pdf: http://proceedings.pmlr.press/kotlowski11a/kotlowski11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/kotlowski11a/kotlowski11a.pdf
 layout: inproceedings
 id: kotlowski11a
 month: 0
 firstpage: 457
 lastpage: 476
 page: 457-476
-origpdf: http://jmlr.org/proceedings/papers/v19/kotlowski11a/kotlowski11a.pdf
 sections: 
 author:
 - given: Wojciech
   family: Kotłowski
 - given: Peter
   family: Grünwald
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
