--- a/_posts/2011-12-21-maillard11a.md
+++ b/_posts/2011-12-21-maillard11a.md
@@ -7,14 +7,13 @@ abstract: We consider a Kullback-Leibler-based algorithm for the stochastic mult
   Our contribution is to provide a finite-time analysis of this algorithm;we get bounds
   whose main terms are smaller than the ones of previously known algorithms with finite-time
   analyses (like UCB-type algorithms).
-pdf: http://proceedings.pmlr.press/maillard11a/maillard11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/maillard11a/maillard11a.pdf
 layout: inproceedings
 id: maillard11a
 month: 0
 firstpage: 497
 lastpage: 514
 page: 497-514
-origpdf: http://jmlr.org/proceedings/papers/v19/maillard11a/maillard11a.pdf
 sections: 
 author:
 - given: Odalric-Ambrym
@@ -23,6 +22,7 @@ author:
   family: Munos
 - given: Gilles
   family: Stoltz
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
