--- a/_posts/2011-12-21-mannor11a.md
+++ b/_posts/2011-12-21-mannor11a.md
@@ -8,14 +8,13 @@ abstract: Approachability has become a standard tool in analyzing learning algor
   with constant per-step complexity) for this setup.We finally consider external and
   internal regret in repeated games with partial monitoring, for which we deriveregret-minimizing
   strategies based on approachability theory.
-pdf: http://proceedings.pmlr.press/mannor11a/mannor11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/mannor11a/mannor11a.pdf
 layout: inproceedings
 id: mannor11a
 month: 0
 firstpage: 515
 lastpage: 536
 page: 515-536
-origpdf: http://jmlr.org/proceedings/papers/v19/mannor11a/mannor11a.pdf
 sections: 
 author:
 - given: Shie
@@ -24,6 +23,7 @@ author:
   family: Perchet
 - given: Gilles
   family: Stoltz
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
