--- a/_posts/2011-12-21-rakhlin11a.md
+++ b/_posts/2011-12-21-rakhlin11a.md
@@ -11,14 +11,13 @@ abstract: 'We study online learnability of a wide class of problems, extending t
   in \citeRakSriTew10. Since we directly study complexity of the problem instead of
   focusing on efficient algorithms, we are able to improve and extend many known results
   which have been previously derived via an algorithmic construction.'
-pdf: http://proceedings.pmlr.press/rakhlin11a/rakhlin11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/rakhlin11a/rakhlin11a.pdf
 layout: inproceedings
 id: rakhlin11a
 month: 0
 firstpage: 559
 lastpage: 594
 page: 559-594
-origpdf: http://jmlr.org/proceedings/papers/v19/rakhlin11a/rakhlin11a.pdf
 sections: 
 author:
 - given: Alexander
@@ -27,6 +26,7 @@ author:
   family: Sridharan
 - given: Ambuj
   family: Tewari
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
