--- a/_posts/2011-12-21-rudin11a.md
+++ b/_posts/2011-12-21-rudin11a.md
@@ -12,14 +12,13 @@ abstract: We consider a supervised learning problem in which data are revealed s
   confidence” measure that provides a weaker minimum support condition that has advantages
   over the strict minimum support. The paper brings together ideas from statistical
   learning theory, association rule mining and Bayesian analysis.
-pdf: http://proceedings.pmlr.press/rudin11a/rudin11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/rudin11a/rudin11a.pdf
 layout: inproceedings
 id: rudin11a
 month: 0
 firstpage: 615
 lastpage: 634
 page: 615-634
-origpdf: http://jmlr.org/proceedings/papers/v19/rudin11a/rudin11a.pdf
 sections: 
 author:
 - given: Cynthia
@@ -32,6 +31,7 @@ author:
   family: Kogan
 - given: David
   family: Madigan
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
