--- a/_posts/2011-12-21-slivkins11a.md
+++ b/_posts/2011-12-21-slivkins11a.md
@@ -23,18 +23,18 @@ abstract: In a multi-armed bandit (MAB) problem, an online algorithm makes a seq
   a finer partition in high-payoff regions of the similarity space and in popular
   regions of the context space. Our results apply to several other settings, e.g.
   MAB with constrained temporal change \citepDynamicMAB-colt08 and sleeping bandits \citepsleeping-colt08.
-pdf: http://proceedings.pmlr.press/slivkins11a/slivkins11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/slivkins11a/slivkins11a.pdf
 layout: inproceedings
 id: slivkins11a
 month: 0
 firstpage: 679
 lastpage: 702
 page: 679-702
-origpdf: http://jmlr.org/proceedings/papers/v19/slivkins11a/slivkins11a.pdf
 sections: 
 author:
 - given: Aleksandrs
   family: Slivkins
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
