--- a/_posts/2011-12-21-szita11a.md
+++ b/_posts/2011-12-21-szita11a.md
@@ -12,20 +12,20 @@ abstract: A popular approach in reinforcement learning is to use a model-based a
   learning algorithm.At the same time, though, we find that learning within the new
   framework can be substantially slower as compared to the standard framework, even
   in the case of simple learning problems.
-pdf: http://proceedings.pmlr.press/szita11a/szita11a.pdf
+pdf: http://jmlr.org/proceedings/papers/v19/szita11a/szita11a.pdf
 layout: inproceedings
 id: szita11a
 month: 0
 firstpage: 739
 lastpage: 772
 page: 739-772
-origpdf: http://jmlr.org/proceedings/papers/v19/szita11a/szita11a.pdf
 sections: 
 author:
 - given: István
   family: Szita
 - given: Csaba
   family: Szepesvári
+reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
