Update pdf link

--- a/_posts/2011-12-21-abernethy11a.md
+++ b/_posts/2011-12-21-abernethy11a.md
@@ -5,7 +5,7 @@ abstract: 'We recall two previously-proposed notions of \emphasymptotic calibrat
   existence of efficient algorithms for calibrated forecasting holds only in the case
   of binary outcomes. We pose the question: do there exist such efficient algorithms
   for the general (non-binary) case?'
-pdf: http://jmlr.org/proceedings/papers/v19/abernethy11a/abernethy11a.pdf
+pdf: http://proceedings.mlr.press/v19/abernethy11a/abernethy11a.pdf
 layout: inproceedings
 id: abernethy11a
 month: 0
@@ -18,7 +18,6 @@ author:
   family: Abernethy
 - given: Shie
   family: Mannor
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
