--- a/_posts/2011-12-21-hazan11a.md
+++ b/_posts/2011-12-21-hazan11a.md
@@ -13,7 +13,7 @@ abstract: We give a novel algorithm for stochastic strongly-convex optimization 
   is inherently suboptimal for stochasticstrongly-convex optimization. This is the
   first formal evidence that onlineconvex optimization is strictly more difficult
   than batch stochastic convexoptimization.
-pdf: http://jmlr.org/proceedings/papers/v19/hazan11a/hazan11a.pdf
+pdf: http://proceedings.mlr.press/v19/hazan11a/hazan11a.pdf
 layout: inproceedings
 id: hazan11a
 month: 0
@@ -26,7 +26,6 @@ author:
   family: Hazan
 - given: Satyen
   family: Kale
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
