--- a/_posts/2011-12-21-hazan11b.md
+++ b/_posts/2011-12-21-hazan11b.md
@@ -4,7 +4,7 @@ abstract: We pose the question of whether it is possible to design a simple, lin
   algorithm for the basic multi-armed bandit problem in the adversarial setting which
   has a regret bound of O(\sqrtQ \log T), where Q is the total quadratic variation
   of all the arms.
-pdf: http://jmlr.org/proceedings/papers/v19/hazan11b/hazan11b.pdf
+pdf: http://proceedings.mlr.press/v19/hazan11b/hazan11b.pdf
 layout: inproceedings
 id: hazan11b
 month: 0
@@ -17,7 +17,6 @@ author:
   family: Hazan
 - given: Satyen
   family: Kale
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
