--- a/_posts/2011-12-21-kakade11a.md
+++ b/_posts/2011-12-21-kakade11a.md
@@ -2,7 +2,7 @@
 title: Preface
 abstract: Preface to the Proceedings of the 24th Annual Conference on Learning Theory
   June 9-11, 2011, Budapest, Hungary.
-pdf: http://jmlr.org/proceedings/papers/v19/kakade11a/kakade11a.pdf
+pdf: http://proceedings.mlr.press/v19/kakade11a/kakade11a.pdf
 section: preface
 layout: inproceedings
 id: kakade11a
@@ -16,7 +16,6 @@ author:
   family: Kakade
 - given: Ulrike
   family: von Luxburg
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
