--- a/_posts/2011-12-21-kotlowski11b.md
+++ b/_posts/2011-12-21-kotlowski11b.md
@@ -4,7 +4,7 @@ abstract: It is unknown what is the most suitable regularization for rotation ma
   and how to maintain uncertainty overrotations in an online setting.We propose to
   address these questions by studying the minimax algorithm for rotations and begin
   by working out the 2-dimensional case.
-pdf: http://jmlr.org/proceedings/papers/v19/kotlowski11b/kotlowski11b.pdf
+pdf: http://proceedings.mlr.press/v19/kotlowski11b/kotlowski11b.pdf
 layout: inproceedings
 id: kotlowski11b
 month: 0
@@ -17,7 +17,6 @@ author:
   family: Kotłowski
 - given: Manfred K.
   family: Warmuth
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
