--- a/_posts/2011-12-21-maillard11a.md
+++ b/_posts/2011-12-21-maillard11a.md
@@ -7,7 +7,7 @@ abstract: We consider a Kullback-Leibler-based algorithm for the stochastic mult
   Our contribution is to provide a finite-time analysis of this algorithm;we get bounds
   whose main terms are smaller than the ones of previously known algorithms with finite-time
   analyses (like UCB-type algorithms).
-pdf: http://jmlr.org/proceedings/papers/v19/maillard11a/maillard11a.pdf
+pdf: http://proceedings.mlr.press/v19/maillard11a/maillard11a.pdf
 layout: inproceedings
 id: maillard11a
 month: 0
@@ -22,7 +22,6 @@ author:
   family: Munos
 - given: Gilles
   family: Stoltz
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
