--- a/_posts/2011-12-21-slivkins11b.md
+++ b/_posts/2011-12-21-slivkins11b.md
@@ -6,7 +6,7 @@ abstract: We present a novel angle for multi-armed bandits (henceforth abbreviat
   constraint motivated by their application to MAB mechanisms.This note is self-contained,
   although some familiarity with MAB is assumed; we refer the reader to \citeCesaBL-book
   for more background.
-pdf: http://jmlr.org/proceedings/papers/v19/slivkins11b/slivkins11b.pdf
+pdf: http://proceedings.mlr.press/v19/slivkins11b/slivkins11b.pdf
 layout: inproceedings
 id: slivkins11b
 month: 0
@@ -17,7 +17,6 @@ sections:
 author:
 - given: Aleksandrs
   family: Slivkins
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
