--- a/_posts/2011-12-21-agarwal11a.md
+++ b/_posts/2011-12-21-agarwal11a.md
@@ -10,7 +10,7 @@ abstract: We analyze general model selection procedures using penalized  empiric
   budget. These algorithms satisfy oracle inequalities  that show that the risk of
   the selected model is not much worse than  if we had devoted all of our computational
   budget to the best  function class.
-pdf: http://jmlr.org/proceedings/papers/v19/agarwal11a/agarwal11a.pdf
+pdf: http://proceedings.mlr.press/v19/agarwal11a/agarwal11a.pdf
 layout: inproceedings
 id: agarwal11a
 month: 0
@@ -27,7 +27,6 @@ author:
   family: Bartlett
 - given: Clement
   family: Levrard
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
