--- a/_posts/2011-12-21-comminges11a.md
+++ b/_posts/2011-12-21-comminges11a.md
@@ -11,7 +11,7 @@ abstract: We address the issue of variable selection in the regression model wit
   the sample size.  The procedure that is provably consistent under these tight conditions
   is simple and is based on comparing the empirical Fourier coefficients with an appropriately
   chosen threshold value.
-pdf: http://jmlr.org/proceedings/papers/v19/comminges11a/comminges11a.pdf
+pdf: http://proceedings.mlr.press/v19/comminges11a/comminges11a.pdf
 layout: inproceedings
 id: comminges11a
 month: 0
@@ -24,7 +24,6 @@ author:
   family: Comminges
 - given: Arnak S.
   family: Dalalyan
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
