--- a/_posts/2011-12-21-daniely11a.md
+++ b/_posts/2011-12-21-daniely11a.md
@@ -16,7 +16,7 @@ abstract: 'Multiclass learning is an area of growing practical relevance, for wh
   label names). We demonstrate the relevanceof the theory by analyzing the sample
   complexity of two widely used hypothesisclasses: generalized linear multiclass models
   and reduction trees. We also obtainsome practically relevant conclusions.'
-pdf: http://jmlr.org/proceedings/papers/v19/daniely11a/daniely11a.pdf
+pdf: http://proceedings.mlr.press/v19/daniely11a/daniely11a.pdf
 layout: inproceedings
 id: daniely11a
 month: 0
@@ -33,7 +33,6 @@ author:
   family: Ben-David
 - given: Shai
   family: Shalev-Shwartz
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
