--- a/_posts/2011-12-21-garivier11a.md
+++ b/_posts/2011-12-21-garivier11a.md
@@ -14,7 +14,7 @@ abstract: 'This paper presents a finite-time analysis of the KL-UCB algorithm, a
   rely on deviations results of independent interest which are stated and proved  in
   the Appendix. As a by-product, we also obtain an improved regret bound for the standard
   UCB  algorithm.'
-pdf: http://jmlr.org/proceedings/papers/v19/garivier11a/garivier11a.pdf
+pdf: http://proceedings.mlr.press/v19/garivier11a/garivier11a.pdf
 layout: inproceedings
 id: garivier11a
 month: 0
@@ -27,7 +27,6 @@ author:
   family: Garivier
 - given: Olivier
   family: Cappé
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
