--- a/_posts/2011-12-21-grunwald11b.md
+++ b/_posts/2011-12-21-grunwald11b.md
@@ -8,7 +8,7 @@ abstract: In sequential prediction with log-loss as well as density estimationwi
   regret, a technique that is very well known in theCOLT community. Motivated by the
   easiness of proofs for the cumulativerisk, our open problem is to use the results
   on cumulative risk to prove corresponding individual-risk bounds.
-pdf: http://jmlr.org/proceedings/papers/v19/grunwald11b/grunwald11b.pdf
+pdf: http://proceedings.mlr.press/v19/grunwald11b/grunwald11b.pdf
 layout: inproceedings
 id: grunwald11b
 month: 0
@@ -21,7 +21,6 @@ author:
   family: Grünwald
 - given: Wojciech
   family: Kotłowski
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
