--- a/_posts/2011-12-21-kallweit11a.md
+++ b/_posts/2011-12-21-kallweit11a.md
@@ -7,7 +7,7 @@ abstract: Concept classes can canonically be represented by sign-matrices,i.e., 
   of margin complexity, reveal how they are relatedto each other, and we reveal how
   they are related to other notions of learning-theoretic relevance like SQ-dimension,
   CSQ-dimension,and the Forster bound.
-pdf: http://jmlr.org/proceedings/papers/v19/kallweit11a/kallweit11a.pdf
+pdf: http://proceedings.mlr.press/v19/kallweit11a/kallweit11a.pdf
 layout: inproceedings
 id: kallweit11a
 month: 0
@@ -20,7 +20,6 @@ author:
   family: Kallweit
 - given: Hans Ulrich
   family: Simon
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
