--- a/_posts/2011-12-21-li11a.md
+++ b/_posts/2011-12-21-li11a.md
@@ -16,7 +16,7 @@ abstract: Efficient estimation of the moments and Shannon entropy of data stream
   factor for this bound is merely about 6.  In addition, we prove that our algorithm
   achieves an upper bound of the Fisher information and in fact it is  close to 100%  statistically
   optimal.  An empirical study is  conducted to verify the accuracy of our algorithm.
-pdf: http://jmlr.org/proceedings/papers/v19/li11a/li11a.pdf
+pdf: http://proceedings.mlr.press/v19/li11a/li11a.pdf
 layout: inproceedings
 id: li11a
 month: 0
@@ -29,7 +29,6 @@ author:
   family: Li
 - given: Cun-Hui
   family: Zhang
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
