--- a/_posts/2011-12-21-mukherjee11a.md
+++ b/_posts/2011-12-21-mukherjee11a.md
@@ -15,7 +15,7 @@ abstract: The AdaBoost algorithm of \citetFreundSc97 was designed to combine  ma
   the best  possible value, where C depends on the dataset. We show that this  dependence
   of the rate on \varepsilon is optimal up to constant  factors, i.e. at least Ω(1/\varepsilon)
   rounds are necessary  to achieve within \varepsilon of the optimal exponential loss.
-pdf: http://jmlr.org/proceedings/papers/v19/mukherjee11a/mukherjee11a.pdf
+pdf: http://proceedings.mlr.press/v19/mukherjee11a/mukherjee11a.pdf
 layout: inproceedings
 id: mukherjee11a
 month: 0
@@ -30,7 +30,6 @@ author:
   family: Rudin
 - given: Robert E.
   family: Schapire
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
