--- a/_posts/2011-12-21-salmon11a.md
+++ b/_posts/2011-12-21-salmon11a.md
@@ -11,7 +11,7 @@ abstract: We consider  the problem of combining  a (possibly uncountably infinit
   in the exact minimax sense without neither discretizing the range of tuningparameters
   nor splitting the set of observations. We also illustrate numerically the good performance
   achievedby the exponentially weighted aggregate.
-pdf: http://jmlr.org/proceedings/papers/v19/salmon11a/salmon11a.pdf
+pdf: http://proceedings.mlr.press/v19/salmon11a/salmon11a.pdf
 layout: inproceedings
 id: salmon11a
 month: 0
@@ -24,7 +24,6 @@ author:
   family: Salmon
 - given: Arnak
   family: Dalalyan
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
