--- a/_posts/2011-12-21-shamir11a.md
+++ b/_posts/2011-12-21-shamir11a.md
@@ -11,7 +11,7 @@ abstract: Trace-norm regularization is a widely-used and successful approach for
   issue of collaborative filtering with bounded models, which enforce predictions
   to lie within a certain range. In particular, we provide experimental and theoretical
   evidence that such models lead to a modest yet significant improvement.
-pdf: http://jmlr.org/proceedings/papers/v19/shamir11a/shamir11a.pdf
+pdf: http://proceedings.mlr.press/v19/shamir11a/shamir11a.pdf
 layout: inproceedings
 id: shamir11a
 month: 0
@@ -24,7 +24,6 @@ author:
   family: Shamir
 - given: Shai
   family: Shalev-Shwartz
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
