--- a/_posts/2011-12-21-steinwart11a.md
+++ b/_posts/2011-12-21-steinwart11a.md
@@ -8,7 +8,7 @@ abstract: Clusters are often defined to be the connected components of a density
   algorithm asymptotically recoversthe corresponding connected components. Unlike
   previous work, our analysis does not require strong assumptions on the density such
   as continuity or even smoothness.
-pdf: http://jmlr.org/proceedings/papers/v19/steinwart11a/steinwart11a.pdf
+pdf: http://proceedings.mlr.press/v19/steinwart11a/steinwart11a.pdf
 layout: inproceedings
 id: steinwart11a
 month: 0
@@ -19,7 +19,6 @@ sections:
 author:
 - given: Ingo
   family: Steinwart
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
