--- a/_posts/2011-12-21-yang11a.md
+++ b/_posts/2011-12-21-yang11a.md
@@ -14,7 +14,7 @@ abstract: We explore a transfer learning setting, in which a finite sequence of 
   of the concept space.  This is not necessarily the case for the joint distribution
   over any smaller number of points.This work has particularly interesting implications
   when applied to active learning methods.
-pdf: http://jmlr.org/proceedings/papers/v19/yang11a/yang11a.pdf
+pdf: http://proceedings.mlr.press/v19/yang11a/yang11a.pdf
 layout: inproceedings
 id: yang11a
 month: 0
@@ -29,7 +29,6 @@ author:
   family: Hanneke
 - given: Jaime
   family: Carbonell
-reponame: v19
 date: 2011-12-21
 address: Budapest, Hungary
 publisher: PMLR
