Update with corrected citeproc.yaml

--- a/_posts/2011-12-21-abernethy11b.md
+++ b/_posts/2011-12-21-abernethy11b.md
@@ -10,6 +10,7 @@ abstract: 'We consider the celebrated Blackwell Approachability Theorem for two-
   of this reduction: the first \emphefficient algorithm for calibrated forecasting.'
 pdf: http://proceedings.mlr.press/v19/abernethy11b/abernethy11b.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: abernethy11b
 month: 0
 firstpage: 27
