--- a/_posts/2011-12-21-bartok11a.md
+++ b/_posts/2011-12-21-bartok11a.md
@@ -13,6 +13,7 @@ abstract: In a partial monitoring game, the learner repeatedly chooses an action
   logarithmic factor for any game.
 pdf: http://proceedings.mlr.press/v19/bartok11a/bartok11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: bartok11a
 month: 0
 firstpage: 133
