--- a/_posts/2011-12-21-comminges11a.md
+++ b/_posts/2011-12-21-comminges11a.md
@@ -13,6 +13,7 @@ abstract: We address the issue of variable selection in the regression model wit
   chosen threshold value.
 pdf: http://proceedings.mlr.press/v19/comminges11a/comminges11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: comminges11a
 month: 0
 firstpage: 187
