--- a/_posts/2011-12-21-feldman11b.md
+++ b/_posts/2011-12-21-feldman11b.md
@@ -21,6 +21,7 @@ abstract: Valiant’s model of evolvability models the evolutionary process of a
   on the domain is severely restricted \citepMichael:07,Feldman:09sqd,KanadeVV:10.
 pdf: http://proceedings.mlr.press/v19/feldman11b/feldman11b.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: feldman11b
 month: 0
 firstpage: 253
