--- a/_posts/2011-12-21-garivier11a.md
+++ b/_posts/2011-12-21-garivier11a.md
@@ -16,6 +16,7 @@ abstract: 'This paper presents a finite-time analysis of the KL-UCB algorithm, a
   UCB  algorithm.'
 pdf: http://proceedings.mlr.press/v19/garivier11a/garivier11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: garivier11a
 month: 0
 firstpage: 359
