--- a/_posts/2011-12-21-hazan11b.md
+++ b/_posts/2011-12-21-hazan11b.md
@@ -6,6 +6,7 @@ abstract: We pose the question of whether it is possible to design a simple, lin
   of all the arms.
 pdf: http://proceedings.mlr.press/v19/hazan11b/hazan11b.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: hazan11b
 month: 0
 firstpage: 817
