--- a/_posts/2011-12-21-kallweit11a.md
+++ b/_posts/2011-12-21-kallweit11a.md
@@ -9,6 +9,7 @@ abstract: Concept classes can canonically be represented by sign-matrices,i.e., 
   CSQ-dimension,and the Forster bound.
 pdf: http://proceedings.mlr.press/v19/kallweit11a/kallweit11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: kallweit11a
 month: 0
 firstpage: 437
