--- a/_posts/2011-12-21-michael11a.md
+++ b/_posts/2011-12-21-michael11a.md
@@ -6,6 +6,7 @@ abstract: To what extent is learnability impeded when information is missing in 
   missing information.
 pdf: http://proceedings.mlr.press/v19/michael11a/michael11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: michael11a
 month: 0
 firstpage: 825
