--- a/_posts/2011-12-21-mukherjee11a.md
+++ b/_posts/2011-12-21-mukherjee11a.md
@@ -17,6 +17,7 @@ abstract: The AdaBoost algorithm of \citetFreundSc97 was designed to combine  ma
   rounds are necessary  to achieve within \varepsilon of the optimal exponential loss.
 pdf: http://proceedings.mlr.press/v19/mukherjee11a/mukherjee11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: mukherjee11a
 month: 0
 firstpage: 537
