--- a/_posts/2011-12-21-rudin11a.md
+++ b/_posts/2011-12-21-rudin11a.md
@@ -14,6 +14,7 @@ abstract: We consider a supervised learning problem in which data are revealed s
   learning theory, association rule mining and Bayesian analysis.
 pdf: http://proceedings.mlr.press/v19/rudin11a/rudin11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: rudin11a
 month: 0
 firstpage: 615
