--- a/_posts/2011-12-21-shamir11a.md
+++ b/_posts/2011-12-21-shamir11a.md
@@ -13,6 +13,7 @@ abstract: Trace-norm regularization is a widely-used and successful approach for
   evidence that such models lead to a modest yet significant improvement.
 pdf: http://proceedings.mlr.press/v19/shamir11a/shamir11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: shamir11a
 month: 0
 firstpage: 661
