--- a/_posts/2011-12-21-slivkins11b.md
+++ b/_posts/2011-12-21-slivkins11b.md
@@ -8,6 +8,7 @@ abstract: We present a novel angle for multi-armed bandits (henceforth abbreviat
   for more background.
 pdf: http://proceedings.mlr.press/v19/slivkins11b/slivkins11b.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: slivkins11b
 month: 0
 firstpage: 829
