--- a/_posts/2011-12-21-steinwart11a.md
+++ b/_posts/2011-12-21-steinwart11a.md
@@ -10,6 +10,7 @@ abstract: Clusters are often defined to be the connected components of a density
   as continuity or even smoothness.
 pdf: http://proceedings.mlr.press/v19/steinwart11a/steinwart11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: steinwart11a
 month: 0
 firstpage: 703
