--- a/_posts/2011-12-21-vanerven11a.md
+++ b/_posts/2011-12-21-vanerven11a.md
@@ -13,6 +13,7 @@ abstract: "Mixability of a loss governs the best possible performance when\taggr
   to improper losses."
 pdf: http://proceedings.mlr.press/v19/vanerven11a/vanerven11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: vanerven11a
 month: 0
 firstpage: 233
