--- a/_posts/2011-12-21-yang11a.md
+++ b/_posts/2011-12-21-yang11a.md
@@ -16,6 +16,7 @@ abstract: We explore a transfer learning setting, in which a finite sequence of 
   when applied to active learning methods.
 pdf: http://proceedings.mlr.press/v19/yang11a/yang11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: yang11a
 month: 0
 firstpage: 789
