--- a/_posts/2011-12-21-abernethy11a.md
+++ b/_posts/2011-12-21-abernethy11a.md
@@ -7,6 +7,7 @@ abstract: 'We recall two previously-proposed notions of \emphasymptotic calibrat
   for the general (non-binary) case?'
 pdf: http://proceedings.mlr.press/v19/abernethy11a/abernethy11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: abernethy11a
 month: 0
 firstpage: 809
