--- a/_posts/2011-12-21-agarwal11a.md
+++ b/_posts/2011-12-21-agarwal11a.md
@@ -12,6 +12,7 @@ abstract: We analyze general model selection procedures using penalized  empiric
   budget to the best  function class.
 pdf: http://proceedings.mlr.press/v19/agarwal11a/agarwal11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: agarwal11a
 month: 0
 firstpage: 69
