--- a/_posts/2011-12-21-amin11a.md
+++ b/_posts/2011-12-21-amin11a.md
@@ -14,6 +14,7 @@ abstract: Motivated by multi-armed bandits (MAB) problems with a very large or e
   binary search.
 pdf: http://proceedings.mlr.press/v19/amin11a/amin11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: amin11a
 month: 0
 firstpage: 87
