--- a/_posts/2011-12-21-audibert11a.md
+++ b/_posts/2011-12-21-audibert11a.md
@@ -16,6 +16,7 @@ abstract: 'We address the online linear optimization problem when theactions of 
   the exponentially weighted average forecaster is suboptimal against L_∞ adversaries.'
 pdf: http://proceedings.mlr.press/v19/audibert11a/audibert11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: audibert11a
 month: 0
 firstpage: 107
