--- a/_posts/2011-12-21-chaudhuri11a.md
+++ b/_posts/2011-12-21-chaudhuri11a.md
@@ -26,6 +26,7 @@ abstract: 'This work studies the problem of privacy-preserving classification â€
   a lower bound.'
 pdf: http://proceedings.mlr.press/v19/chaudhuri11a/chaudhuri11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: chaudhuri11a
 month: 0
 firstpage: 155
