--- a/_posts/2011-12-21-daniely11a.md
+++ b/_posts/2011-12-21-daniely11a.md
@@ -18,6 +18,7 @@ abstract: 'Multiclass learning is an area of growing practical relevance, for wh
   and reduction trees. We also obtainsome practically relevant conclusions.'
 pdf: http://proceedings.mlr.press/v19/daniely11a/daniely11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: daniely11a
 month: 0
 firstpage: 207
