--- a/_posts/2011-12-21-feldman11a.md
+++ b/_posts/2011-12-21-feldman11a.md
@@ -36,6 +36,7 @@ abstract: Much work has been done on learning various classes of “simple"monot
   of depth-3 monotone formulas.
 pdf: http://proceedings.mlr.press/v19/feldman11a/feldman11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: feldman11a
 month: 0
 firstpage: 273
