--- a/_posts/2011-12-21-foster11a.md
+++ b/_posts/2011-12-21-foster11a.md
@@ -9,6 +9,7 @@ abstract: We consider the problem of forecasting a sequence of outcomes from an 
   are considered, including finiteness of Vapnik-Chervonenkis and Littlestone’s dimensions.
 pdf: http://proceedings.mlr.press/v19/foster11a/foster11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: foster11a
 month: 0
 firstpage: 293
