--- a/_posts/2011-12-21-foygel11a.md
+++ b/_posts/2011-12-21-foygel11a.md
@@ -9,6 +9,7 @@ abstract: We consider the problem of approximately reconstructing a partially-ob
   published guarantees  based on specialized analysis.
 pdf: http://proceedings.mlr.press/v19/foygel11a/foygel11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: foygel11a
 month: 0
 firstpage: 315
