--- a/_posts/2011-12-21-gao11a.md
+++ b/_posts/2011-12-21-gao11a.md
@@ -18,6 +18,7 @@ abstract: Multi-label learning has attracted much attention during the past few 
   learning by decomposing into a set of binary classification problems.
 pdf: http://proceedings.mlr.press/v19/gao11a/gao11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: gao11a
 month: 0
 firstpage: 341
