--- a/_posts/2011-12-21-grunwald11a.md
+++ b/_posts/2011-12-21-grunwald11a.md
@@ -12,6 +12,7 @@ abstract: We extend Bayesian MAP and Minimum Description Length (MDL) learning b
   prior)/n rather than \sqrt(- \log \text\sc prior)/n.
 pdf: http://proceedings.mlr.press/v19/grunwald11a/grunwald11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: grunwald11a
 month: 0
 firstpage: 397
