--- a/_posts/2011-12-21-grunwald11b.md
+++ b/_posts/2011-12-21-grunwald11b.md
@@ -10,6 +10,7 @@ abstract: In sequential prediction with log-loss as well as density estimationwi
   on cumulative risk to prove corresponding individual-risk bounds.
 pdf: http://proceedings.mlr.press/v19/grunwald11b/grunwald11b.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: grunwald11b
 month: 0
 firstpage: 813
