--- a/_posts/2011-12-21-hazan11a.md
+++ b/_posts/2011-12-21-hazan11a.md
@@ -15,6 +15,7 @@ abstract: We give a novel algorithm for stochastic strongly-convex optimization 
   than batch stochastic convexoptimization.
 pdf: http://proceedings.mlr.press/v19/hazan11a/hazan11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: hazan11a
 month: 0
 firstpage: 421
