--- a/_posts/2011-12-21-kakade11a.md
+++ b/_posts/2011-12-21-kakade11a.md
@@ -5,6 +5,7 @@ abstract: Preface to the Proceedings of the 24th Annual Conference on Learning T
 pdf: http://proceedings.mlr.press/v19/kakade11a/kakade11a.pdf
 section: preface
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: kakade11a
 month: 0
 firstpage: 0
