--- a/_posts/2011-12-21-kotlowski11a.md
+++ b/_posts/2011-12-21-kotlowski11a.md
@@ -15,6 +15,7 @@ abstract: The paper considers sequential prediction of individual sequences  wit
   prior.
 pdf: http://proceedings.mlr.press/v19/kotlowski11a/kotlowski11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: kotlowski11a
 month: 0
 firstpage: 457
