--- a/_posts/2011-12-21-kotlowski11b.md
+++ b/_posts/2011-12-21-kotlowski11b.md
@@ -6,6 +6,7 @@ abstract: It is unknown what is the most suitable regularization for rotation ma
   by working out the 2-dimensional case.
 pdf: http://proceedings.mlr.press/v19/kotlowski11b/kotlowski11b.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: kotlowski11b
 month: 0
 firstpage: 821
