--- a/_posts/2011-12-21-li11a.md
+++ b/_posts/2011-12-21-li11a.md
@@ -18,6 +18,7 @@ abstract: Efficient estimation of the moments and Shannon entropy of data stream
   optimal.  An empirical study is  conducted to verify the accuracy of our algorithm.
 pdf: http://proceedings.mlr.press/v19/li11a/li11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: li11a
 month: 0
 firstpage: 477
