--- a/_posts/2011-12-21-maillard11a.md
+++ b/_posts/2011-12-21-maillard11a.md
@@ -9,6 +9,7 @@ abstract: We consider a Kullback-Leibler-based algorithm for the stochastic mult
   analyses (like UCB-type algorithms).
 pdf: http://proceedings.mlr.press/v19/maillard11a/maillard11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: maillard11a
 month: 0
 firstpage: 497
