--- a/_posts/2011-12-21-mannor11a.md
+++ b/_posts/2011-12-21-mannor11a.md
@@ -10,6 +10,7 @@ abstract: Approachability has become a standard tool in analyzing learning algor
   strategies based on approachability theory.
 pdf: http://proceedings.mlr.press/v19/mannor11a/mannor11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: mannor11a
 month: 0
 firstpage: 515
