--- a/_posts/2011-12-21-rakhlin11a.md
+++ b/_posts/2011-12-21-rakhlin11a.md
@@ -13,6 +13,7 @@ abstract: 'We study online learnability of a wide class of problems, extending t
   which have been previously derived via an algorithmic construction.'
 pdf: http://proceedings.mlr.press/v19/rakhlin11a/rakhlin11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: rakhlin11a
 month: 0
 firstpage: 559
