--- a/_posts/2011-12-21-rigollet11a.md
+++ b/_posts/2011-12-21-rigollet11a.md
@@ -14,6 +14,7 @@ abstract: 'Motivated by problems of anomaly detection, this paper implements the
   constrained optimization are evident and are investigated.'
 pdf: http://proceedings.mlr.press/v19/rigollet11a/rigollet11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: rigollet11a
 month: 0
 firstpage: 595
