--- a/_posts/2011-12-21-salmon11a.md
+++ b/_posts/2011-12-21-salmon11a.md
@@ -13,6 +13,7 @@ abstract: We consider  the problem of combining  a (possibly uncountably infinit
   achievedby the exponentially weighted aggregate.
 pdf: http://proceedings.mlr.press/v19/salmon11a/salmon11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: salmon11a
 month: 0
 firstpage: 635
