--- a/_posts/2011-12-21-slivkins11a.md
+++ b/_posts/2011-12-21-slivkins11a.md
@@ -25,6 +25,7 @@ abstract: In a multi-armed bandit (MAB) problem, an online algorithm makes a seq
   MAB with constrained temporal change \citepDynamicMAB-colt08 and sleeping bandits \citepsleeping-colt08.
 pdf: http://proceedings.mlr.press/v19/slivkins11a/slivkins11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: slivkins11a
 month: 0
 firstpage: 679
