--- a/_posts/2011-12-21-szita11a.md
+++ b/_posts/2011-12-21-szita11a.md
@@ -14,6 +14,7 @@ abstract: A popular approach in reinforcement learning is to use a model-based a
   in the case of simple learning problems.
 pdf: http://proceedings.mlr.press/v19/szita11a/szita11a.pdf
 layout: inproceedings
+series: Proceedings of Machine Learning Research
 id: szita11a
 month: 0
 firstpage: 739
