Stop conversion of page numbers to integers

--- a/_posts/2011-12-21-kakade11a.md
+++ b/_posts/2011-12-21-kakade11a.md
@@ -8,9 +8,9 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: kakade11a
 month: 0
-firstpage: 0
-lastpage: 0
-page: 0-0
+firstpage: i
+lastpage: i
+page: i-i
 sections: 
 author:
 - given: Sham M.
