Update styles, headers, _config.yml

--- a/_posts/2011-12-21-abernethy11a.md
+++ b/_posts/2011-12-21-abernethy11a.md
@@ -10,6 +10,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: abernethy11a
 month: 0
+tex_title: Does an Efficient Calibrated Forecasting Strategy Exist?
 firstpage: 809
 lastpage: 812
 page: 809-812
