--- a/_posts/2011-12-21-comminges11a.md
+++ b/_posts/2011-12-21-comminges11a.md
@@ -16,6 +16,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: comminges11a
 month: 0
+tex_title: Tight conditions for consistent variable selection in high dimensional
+  nonparametric regression
 firstpage: 187
 lastpage: 206
 page: 187-206
