--- a/_posts/2011-12-21-daniely11a.md
+++ b/_posts/2011-12-21-daniely11a.md
@@ -21,6 +21,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: daniely11a
 month: 0
+tex_title: Multiclass Learnability and the ERM principle
 firstpage: 207
 lastpage: 232
 page: 207-232
