--- a/_posts/2011-12-21-feldman11a.md
+++ b/_posts/2011-12-21-feldman11a.md
@@ -39,6 +39,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: feldman11a
 month: 0
+tex_title: Lower Bounds and Hardness Amplification for Learning Shallow Monotone Formulas
 firstpage: 273
 lastpage: 292
 page: 273-292
