--- a/_posts/2011-12-21-feldman11b.md
+++ b/_posts/2011-12-21-feldman11b.md
@@ -24,6 +24,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: feldman11b
 month: 0
+tex_title: Distribution-Independent Evolvability of Linear Threshold Functions
 firstpage: 253
 lastpage: 272
 page: 253-272
