--- a/_posts/2011-12-21-foster11a.md
+++ b/_posts/2011-12-21-foster11a.md
@@ -12,6 +12,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: foster11a
 month: 0
+tex_title: Complexity-Based Approach to Calibration with Checking Rules
 firstpage: 293
 lastpage: 314
 page: 293-314
