--- a/_posts/2011-12-21-foygel11a.md
+++ b/_posts/2011-12-21-foygel11a.md
@@ -12,6 +12,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: foygel11a
 month: 0
+tex_title: Concentration-Based Guarantees  for Low-Rank Matrix Reconstruction
 firstpage: 315
 lastpage: 340
 page: 315-340
