--- a/_posts/2011-12-21-garivier11a.md
+++ b/_posts/2011-12-21-garivier11a.md
@@ -19,6 +19,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: garivier11a
 month: 0
+tex_title: The KL-UCB Algorithm for Bounded Stochastic Bandits and Beyond
 firstpage: 359
 lastpage: 376
 page: 359-376
