--- a/_posts/2011-12-21-grunwald11b.md
+++ b/_posts/2011-12-21-grunwald11b.md
@@ -13,6 +13,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: grunwald11b
 month: 0
+tex_title: Bounds on Individual Risk for Log-loss Predictors
 firstpage: 813
 lastpage: 816
 page: 813-816
