--- a/_posts/2011-12-21-hazan11a.md
+++ b/_posts/2011-12-21-hazan11a.md
@@ -18,6 +18,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: hazan11a
 month: 0
+tex_title: 'Beyond the regret minimization barrier: an optimal algorithm for stochastic
+  strongly-convex optimization'
 firstpage: 421
 lastpage: 436
 page: 421-436
