--- a/_posts/2011-12-21-mannor11a.md
+++ b/_posts/2011-12-21-mannor11a.md
@@ -13,6 +13,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: mannor11a
 month: 0
+tex_title: Robust approachability and regret minimization in games with partial monitoring
 firstpage: 515
 lastpage: 536
 page: 515-536
