--- a/_posts/2011-12-21-michael11a.md
+++ b/_posts/2011-12-21-michael11a.md
@@ -9,6 +9,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: michael11a
 month: 0
+tex_title: Missing Information Impediments to Learnability
 firstpage: 825
 lastpage: 828
 page: 825-828
