--- a/_posts/2011-12-21-mukherjee11a.md
+++ b/_posts/2011-12-21-mukherjee11a.md
@@ -20,6 +20,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: mukherjee11a
 month: 0
+tex_title: The Rate of Convergence of Adaboost
 firstpage: 537
 lastpage: 558
 page: 537-558
