--- a/_posts/2011-12-21-rigollet11a.md
+++ b/_posts/2011-12-21-rigollet11a.md
@@ -17,6 +17,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: rigollet11a
 month: 0
+tex_title: Neyman-Pearson classification under a strict constraint
 firstpage: 595
 lastpage: 614
 page: 595-614
