--- a/_posts/2011-12-21-rudin11a.md
+++ b/_posts/2011-12-21-rudin11a.md
@@ -17,6 +17,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: rudin11a
 month: 0
+tex_title: Sequential Event Prediction with Association Rules
 firstpage: 615
 lastpage: 634
 page: 615-634
