--- a/_posts/2011-12-21-slivkins11b.md
+++ b/_posts/2011-12-21-slivkins11b.md
@@ -11,6 +11,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: slivkins11b
 month: 0
+tex_title: Monotone multi-armed bandit allocations
 firstpage: 829
 lastpage: 834
 page: 829-834
