--- a/_posts/2011-12-21-abernethy11b.md
+++ b/_posts/2011-12-21-abernethy11b.md
@@ -13,6 +13,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: abernethy11b
 month: 0
+tex_title: Blackwell Approachability and No-Regret Learning are Equivalent
 firstpage: 27
 lastpage: 46
 page: 27-46
