--- a/_posts/2011-12-21-acharya11a.md
+++ b/_posts/2011-12-21-acharya11a.md
@@ -11,6 +11,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: acharya11a
 month: 0
+tex_title: Competitive Closeness Testing
 firstpage: 47
 lastpage: 68
 page: 47-68
