--- a/_posts/2011-12-21-agarwal11a.md
+++ b/_posts/2011-12-21-agarwal11a.md
@@ -15,6 +15,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: agarwal11a
 month: 0
+tex_title: Oracle inequalities for computationally budgeted model selection
 firstpage: 69
 lastpage: 86
 page: 69-86
