--- a/_posts/2011-12-21-amin11a.md
+++ b/_posts/2011-12-21-amin11a.md
@@ -17,6 +17,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: amin11a
 month: 0
+tex_title: Bandits, Query Learning, and the Haystack Dimension
 firstpage: 87
 lastpage: 106
 page: 87-106
