--- a/_posts/2011-12-21-audibert11a.md
+++ b/_posts/2011-12-21-audibert11a.md
@@ -19,6 +19,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: audibert11a
 month: 0
+tex_title: Minimax Policies for Combinatorial Prediction Games
 firstpage: 107
 lastpage: 132
 page: 107-132
