--- a/_posts/2011-12-21-bartok11a.md
+++ b/_posts/2011-12-21-bartok11a.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: bartok11a
 month: 0
+tex_title: Minimax Regret of Finite Partial-Monitoring Games in Stochastic Environments
 firstpage: 133
 lastpage: 154
 page: 133-154
