--- a/_posts/2011-12-21-chaudhuri11a.md
+++ b/_posts/2011-12-21-chaudhuri11a.md
@@ -29,6 +29,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: chaudhuri11a
 month: 0
+tex_title: Sample Complexity Bounds for Differentially Private Learning
 firstpage: 155
 lastpage: 186
 page: 155-186
