--- a/_posts/2011-12-21-gao11a.md
+++ b/_posts/2011-12-21-gao11a.md
@@ -21,6 +21,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: gao11a
 month: 0
+tex_title: On the Consistency of Multi-Label Learning
 firstpage: 341
 lastpage: 358
 page: 341-358
