--- a/_posts/2011-12-21-grunwald11a.md
+++ b/_posts/2011-12-21-grunwald11a.md
@@ -15,6 +15,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: grunwald11a
 month: 0
+tex_title: 'Safe Learning:    bridging the gap between Bayes, MDL and statistical
+  learning theory via  empirical convexity'
 firstpage: 397
 lastpage: 420
 page: 397-420
