--- a/_posts/2011-12-21-hazan11b.md
+++ b/_posts/2011-12-21-hazan11b.md
@@ -9,6 +9,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: hazan11b
 month: 0
+tex_title: A simple multi-armed bandit algorithm with optimal variation-bounded regret
 firstpage: 817
 lastpage: 820
 page: 817-820
