--- a/_posts/2011-12-21-kakade11a.md
+++ b/_posts/2011-12-21-kakade11a.md
@@ -8,6 +8,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: kakade11a
 month: 0
+tex_title: Preface
 firstpage: i
 lastpage: i
 page: i-i
