--- a/_posts/2011-12-21-kallweit11a.md
+++ b/_posts/2011-12-21-kallweit11a.md
@@ -12,6 +12,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: kallweit11a
 month: 0
+tex_title: A Close Look to Margin Complexity and Related Parameters
 firstpage: 437
 lastpage: 456
 page: 437-456
