--- a/_posts/2011-12-21-kotlowski11a.md
+++ b/_posts/2011-12-21-kotlowski11a.md
@@ -18,6 +18,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: kotlowski11a
 month: 0
+tex_title: Maximum Likelihood vs. Sequential Normalized Maximum Likelihood  in On-line
+  Density Estimation
 firstpage: 457
 lastpage: 476
 page: 457-476
