--- a/_posts/2011-12-21-kotlowski11b.md
+++ b/_posts/2011-12-21-kotlowski11b.md
@@ -9,6 +9,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: kotlowski11b
 month: 0
+tex_title: Minimax Algorithm for Learning Rotations
 firstpage: 821
 lastpage: 824
 page: 821-824
