--- a/_posts/2011-12-21-li11a.md
+++ b/_posts/2011-12-21-li11a.md
@@ -21,6 +21,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: li11a
 month: 0
+tex_title: A New Algorithm for Compressed Counting with Applications in Shannon Entropy
+  Estimation in Dynamic Data
 firstpage: 477
 lastpage: 496
 page: 477-496
