--- a/_posts/2011-12-21-maillard11a.md
+++ b/_posts/2011-12-21-maillard11a.md
@@ -12,6 +12,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: maillard11a
 month: 0
+tex_title: A Finite-Time Analysis of Multi-armed Bandits Problems with Kullback-Leibler
+  Divergences
 firstpage: 497
 lastpage: 514
 page: 497-514
