--- a/_posts/2011-12-21-rakhlin11a.md
+++ b/_posts/2011-12-21-rakhlin11a.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: rakhlin11a
 month: 0
+tex_title: 'Online Learning: Beyond Regret'
 firstpage: 559
 lastpage: 594
 page: 559-594
