--- a/_posts/2011-12-21-salmon11a.md
+++ b/_posts/2011-12-21-salmon11a.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: salmon11a
 month: 0
+tex_title: Optimal aggregation of affine estimators
 firstpage: 635
 lastpage: 660
 page: 635-660
