--- a/_posts/2011-12-21-shamir11a.md
+++ b/_posts/2011-12-21-shamir11a.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: shamir11a
 month: 0
+tex_title: 'Collaborative Filtering with the Trace Norm: Learning, Bounding, and Transducing'
 firstpage: 661
 lastpage: 678
 page: 661-678
