--- a/_posts/2011-12-21-slivkins11a.md
+++ b/_posts/2011-12-21-slivkins11a.md
@@ -28,6 +28,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: slivkins11a
 month: 0
+tex_title: Contextual Bandits with Similarity Information
 firstpage: 679
 lastpage: 702
 page: 679-702
