--- a/_posts/2011-12-21-steinwart11a.md
+++ b/_posts/2011-12-21-steinwart11a.md
@@ -13,6 +13,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: steinwart11a
 month: 0
+tex_title: Adaptive Density Level Set Clustering
 firstpage: 703
 lastpage: 738
 page: 703-738
