--- a/_posts/2011-12-21-szita11a.md
+++ b/_posts/2011-12-21-szita11a.md
@@ -17,6 +17,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: szita11a
 month: 0
+tex_title: Agnostic KWIK learning and efficient approximate reinforcement learning
 firstpage: 739
 lastpage: 772
 page: 739-772
