--- a/_posts/2011-12-21-vanerven11a.md
+++ b/_posts/2011-12-21-vanerven11a.md
@@ -16,6 +16,7 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: vanerven11a
 month: 0
+tex_title: Mixability is Bayes Risk Curvature Relative to Log Loss
 firstpage: 233
 lastpage: 252
 page: 233-252
