--- a/_posts/2011-12-21-yang11a.md
+++ b/_posts/2011-12-21-yang11a.md
@@ -19,6 +19,8 @@ layout: inproceedings
 series: Proceedings of Machine Learning Research
 id: yang11a
 month: 0
+tex_title: Identifiability of Priors from Bounded Sample Sizes  with Applications
+  to Transfer Learning
 firstpage: 789
 lastpage: 806
 page: 789-806
